--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -172,6 +172,7 @@
                         android:textSize="15dp" />
 
                     <TextView
+                        android:id="@+id/tv_pullintocustomer"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
