--- a/app/src/main/res/layout/activity_ht_daysum_details.xml
+++ b/app/src/main/res/layout/activity_ht_daysum_details.xml
@@ -50,7 +50,8 @@
             <com.wtcrmandroid.view.MyListView
                 android:id="@+id/lv_work"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
             </com.wtcrmandroid.view.MyListView>
 
             <com.wtcrmandroid.view.MyListView
