--- a/app/src/main/res/layout/activity_weekplan_details.xml
+++ b/app/src/main/res/layout/activity_weekplan_details.xml
@@ -22,8 +22,7 @@
         android:gravity="center_vertical"
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
-        android:background="@android:color/white"
-        android:layout_marginBottom="10dp">
+        android:background="@android:color/white">
 
         <ImageView
             android:layout_width="wrap_content"
