--- a/app/src/main/res/layout/activity_weeksum_details.xml
+++ b/app/src/main/res/layout/activity_weeksum_details.xml
@@ -20,8 +20,7 @@
         android:gravity="center_vertical"
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
-        android:background="@android:color/white"
-        android:layout_marginBottom="10dp">
+        android:background="@android:color/white">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -38,11 +37,30 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/lv_weeksum"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ListView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.wtcrmandroid.view.MyListView
+                android:id="@+id/lv_weeksum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+            </com.wtcrmandroid.view.MyListView>
+
+            <com.wtcrmandroid.view.MyListView
+                android:id="@+id/lv_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.wtcrmandroid.view.MyListView>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
