--- a/app/src/main/res/layout/activity_xs_dayplan_details.xml
+++ b/app/src/main/res/layout/activity_xs_dayplan_details.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center_vertical"
+        android:background="@color/white"
         android:paddingRight="10dp"
         android:paddingLeft="10dp">
 
@@ -41,6 +42,9 @@
         android:id="@+id/tab_dayplan_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:tabTextAppearance="@style/ContentText"
+        app:tabSelectedTextColor="@color/colorPrimary"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
     </android.support.design.widget.TabLayout>
