--- a/app/src/main/res/layout/item_dayplan_details.xml
+++ b/app/src/main/res/layout/item_dayplan_details.xml
@@ -2,82 +2,98 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@android:color/white"
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_work_sort"
-        style="@style/HintText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/add_A"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:weightSum="2">
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/tv_work_sort"
+            style="@style/HintText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/add_A"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/ViewWith"
+            android:layout_marginLeft="10dp"
+            android:background="@color/colorBackground"/>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:padding="10dp"
+            android:weightSum="2">
 
-            <TextView
-                style="@style/HintText"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/execute_person"/>
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/tv_dayplan_person"
-                style="@style/ContentText"
-                android:layout_width="wrap_content"
+                <TextView
+                    style="@style/HintText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/execute_person"/>
+
+                <TextView
+                    android:id="@+id/tv_dayplan_person"
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"/>
+                android:layout_weight="1">
+
+                <TextView
+                    style="@style/HintText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/hint_dayplan_percent"/>
+
+                <TextView
+                    android:id="@+id/tv_dayplan_percent"
+                    style="@style/ContentText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:padding="10dp">
 
             <TextView
-                style="@style/HintText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/hint_dayplan_percent"/>
+                android:text="@string/hint_dayplan_content"/>
 
             <TextView
-                android:id="@+id/tv_dayplan_percent"
+                android:id="@+id/tv_dayplan_content"
                 style="@style/ContentText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"/>
-
         </LinearLayout>
 
-
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_dayplan_content"/>
-
-        <TextView
-            android:id="@+id/tv_dayplan_content"
-            style="@style/ContentText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"/>
-    </LinearLayout>
 
 </LinearLayout>
