--- a/app/src/main/res/layout/item_major_fragment.xml
+++ b/app/src/main/res/layout/item_major_fragment.xml
@@ -4,54 +4,69 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_work_sort"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@android:color/white"
-        android:padding="20dp">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_work_sort"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Customer_name"
-            style="@style/HintText"/>
+            android:padding="10dp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/ViewWith"
+            android:layout_marginLeft="10dp"
+            android:background="@color/colorBackground"/>
 
-        <TextView
-            android:id="@+id/tv_customrname"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            style="@style/ContentText"/>
 
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Customer_name"
+                style="@style/HintText"/>
+
+            <TextView
+                android:id="@+id/tv_customrname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                style="@style/ContentText"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fengxi_genjin"
+                style="@style/HintText"/>
+
+            <TextView
+                android:id="@+id/tv_analysis"
+                style="@style/ContentText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:padding="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/fengxi_genjin"
-            style="@style/HintText"/>
-
-        <TextView
-            android:id="@+id/tv_analysis"
-            style="@style/ContentText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            />
-
-    </LinearLayout>
 
 </LinearLayout>
