--- a/app/src/main/res/layout/item_weekplan_details.xml
+++ b/app/src/main/res/layout/item_weekplan_details.xml
@@ -2,74 +2,83 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@android:color/white"
+
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_weekplan_title"
-        style="@style/ContentText"
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
         <TextView
-            style="@style/HintText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_dayplan_content"/>
-
-        <TextView
-            android:id="@+id/tv_weekplan_content"
+            android:id="@+id/tv_weekplan_title"
             style="@style/ContentText"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
+            android:padding="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
-
-        <TextView
-            style="@style/HintText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hint_weekplan_mb"/>
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/tv_weekplan_mb"
-            style="@style/ContentText"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                style="@style/HintText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_dayplan_content"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+            <TextView
+                android:id="@+id/tv_weekplan_content"
+                style="@style/ContentText"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            style="@style/HintText"
-            android:layout_width="wrap_content"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hint_dayplan_percent"/>
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/tv_weekplan_percent"
-            style="@style/ContentText"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                style="@style/HintText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_weekplan_mb"/>
+
+            <TextView
+                android:id="@+id/tv_weekplan_mb"
+                style="@style/ContentText"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+            <TextView
+                style="@style/HintText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_dayplan_percent"/>
+
+            <TextView
+                android:id="@+id/tv_weekplan_percent"
+                style="@style/ContentText"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
